I think its done

--- a/App.config
+++ b/App.config
@@ -26,13 +26,14 @@
         <value />
       </setting>
       <setting name="botname" serializeAs="String">
-        <value>GG Lobby</value>
+        <value>Box 1</value>
       </setting>
       <setting name="Botpic" serializeAs="String">
         <value>https://img1.wsimg.com/isteam/ip/b4b9be8a-8d11-4a70-bf87-031e19961b95/profile4.png</value>
       </setting>
       <setting name="Keywords" serializeAs="String">
-        <value>[WARN]
+        <value>[FATAL]
+[WARN]
 [ERROR]
 cheat</value>
       </setting>
@@ -41,6 +42,21 @@ cheat</value>
       </setting>
       <setting name="logname" serializeAs="String">
         <value>Torch*.log</value>
+      </setting>
+      <setting name="FileDisc" serializeAs="String">
+        <value>GG Lobby
+GG Server 1
+GG Server 2
+GG Server 3
+GG Server 4
+GG Server 5</value>
+      </setting>
+      <setting name="DisPing" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="FileLogs" serializeAs="String">
+        <value>C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs
+C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs2</value>
       </setting>
     </NorthAlert.Properties.Settings>
     <TestReadText.Properties.Settings>
