--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -9,13 +9,14 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="botname" Type="System.String" Scope="User">
-      <Value Profile="(Default)">GG Lobby</Value>
+      <Value Profile="(Default)">Box 1</Value>
     </Setting>
     <Setting Name="Botpic" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://img1.wsimg.com/isteam/ip/b4b9be8a-8d11-4a70-bf87-031e19961b95/profile4.png</Value>
     </Setting>
     <Setting Name="Keywords" Type="System.String" Scope="User">
-      <Value Profile="(Default)">[WARN]
+      <Value Profile="(Default)">[FATAL]
+[WARN]
 [ERROR]
 cheat</Value>
     </Setting>
@@ -24,6 +25,21 @@ cheat</Value>
     </Setting>
     <Setting Name="logname" Type="System.String" Scope="User">
       <Value Profile="(Default)">Torch*.log</Value>
+    </Setting>
+    <Setting Name="FileDisc" Type="System.String" Scope="User">
+      <Value Profile="(Default)">GG Lobby
+GG Server 1
+GG Server 2
+GG Server 3
+GG Server 4
+GG Server 5</Value>
+    </Setting>
+    <Setting Name="DisPing" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="FileLogs" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs
+C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
