--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="NorthAlert.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TestReadText.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
@@ -19,9 +19,6 @@
   </runtime>
   <userSettings>
     <NorthAlert.Properties.Settings>
-      <setting name="Logs" serializeAs="String">
-        <value>C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs</value>
-      </setting>
       <setting name="DisURL" serializeAs="String">
         <value />
       </setting>
@@ -29,7 +26,7 @@
         <value>Box 1</value>
       </setting>
       <setting name="Botpic" serializeAs="String">
-        <value>https://img1.wsimg.com/isteam/ip/b4b9be8a-8d11-4a70-bf87-031e19961b95/profile4.png</value>
+        <value />
       </setting>
       <setting name="Keywords" serializeAs="String">
         <value>[FATAL]
@@ -41,22 +38,35 @@ cheat</value>
         <value>False</value>
       </setting>
       <setting name="logname" serializeAs="String">
-        <value>Torch*.log</value>
+        <value>Torch*.log
+Keen*.log
+AdminLog*.log</value>
       </setting>
       <setting name="FileDisc" serializeAs="String">
-        <value>GG Lobby
-GG Server 1
-GG Server 2
-GG Server 3
-GG Server 4
-GG Server 5</value>
+        <value>Lobby
+Server 1
+Server 2
+Server 3
+Server 4
+Server 5</value>
       </setting>
       <setting name="DisPing" serializeAs="String">
-        <value />
+        <value>
+
+
+&amp;964549461898563684</value>
       </setting>
       <setting name="FileLogs" serializeAs="String">
-        <value>C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs
-C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs2</value>
+        <value>C:\Users\Insane\Desktop\TorchServers\torch-server1\Logs</value>
+      </setting>
+      <setting name="Excludelist" serializeAs="String">
+        <value>Sound on different thread:
+Missing definition
+Saving grid
+QuantumHangar.ParallelSpawner:</value>
+      </setting>
+      <setting name="Cooldown" serializeAs="String">
+        <value>3</value>
       </setting>
     </NorthAlert.Properties.Settings>
     <TestReadText.Properties.Settings>
