--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -2,9 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="NorthAlert.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Logs" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs</Value>
-    </Setting>
     <Setting Name="DisURL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -12,7 +9,7 @@
       <Value Profile="(Default)">Box 1</Value>
     </Setting>
     <Setting Name="Botpic" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://img1.wsimg.com/isteam/ip/b4b9be8a-8d11-4a70-bf87-031e19961b95/profile4.png</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Keywords" Type="System.String" Scope="User">
       <Value Profile="(Default)">[FATAL]
@@ -24,22 +21,35 @@ cheat</Value>
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="logname" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Torch*.log</Value>
+      <Value Profile="(Default)">Torch*.log
+Keen*.log
+AdminLog*.log</Value>
     </Setting>
     <Setting Name="FileDisc" Type="System.String" Scope="User">
-      <Value Profile="(Default)">GG Lobby
-GG Server 1
-GG Server 2
-GG Server 3
-GG Server 4
-GG Server 5</Value>
+      <Value Profile="(Default)">Lobby
+Server 1
+Server 2
+Server 3
+Server 4
+Server 5</Value>
     </Setting>
     <Setting Name="DisPing" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">
+
+
+&amp;964549461898563684</Value>
     </Setting>
     <Setting Name="FileLogs" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs
-C:\Users\Insane\Desktop\Space Engneering Stuff GG life\Torch-Server\Logs2</Value>
+      <Value Profile="(Default)">C:\Users\Insane\Desktop\TorchServers\torch-server1\Logs</Value>
+    </Setting>
+    <Setting Name="Excludelist" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Sound on different thread:
+Missing definition
+Saving grid
+QuantumHangar.ParallelSpawner:</Value>
+    </Setting>
+    <Setting Name="Cooldown" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
     </Setting>
   </Settings>
 </SettingsFile>
